# ITMO-GD-CPP

lab1/: CMakeLists.txt  README.md  main.cpp
lab1/save/: savegame.txt
lab1/src/file_system/: file_manager.cpp  file_manager.h
lab1/src/game/: game.cpp  game.h  game_io.cpp  game_io.h
lab1/src/game_state/: game_state.cpp  game_state.h
lab1/src/utils/: utils.cpp  utils.h
lab2/: CMakeLists.txt  README.md  main.cpp
lab2/array/: array.cpp  array.h
lab2/test/: test.cpp
lab3/: CMakeLists.txt  Makefile  README.md
lab3/quicksort/: quicksort.cpp  quicksort.h
lab3/test/: test.cpp
lab4/: README.md  main.cpp
